--- a/se.vcxproj.filters
+++ b/se.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClCompile Include="mathematics.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="multi_string.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
     <ClCompile Include="t_function.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
@@ -69,6 +66,9 @@
     <ClCompile Include="..\mutator\library\graphics.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\mutator\library\multi_string.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tetron.h">
@@ -87,9 +87,6 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="hash.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="multi_string.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="t_function.h">
@@ -129,6 +126,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="..\mutator\library\graphics.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="..\mutator\library\multi_string.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
