--- a/se.vcxproj.filters
+++ b/se.vcxproj.filters
@@ -77,13 +77,7 @@
     <ClInclude Include="mutator.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="speed.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="mathematics.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="hash.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="t_function.h">
@@ -129,6 +123,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="..\mutator\library\json.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="..\mutator\library\speed.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="..\mutator\library\hash.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
