начало переделки распознавания

--- a/se.vcxproj
+++ b/se.vcxproj
@@ -118,7 +118,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <DisableSpecificWarnings>4244</DisableSpecificWarnings>
-      <AdditionalIncludeDirectories>$(ProjectDir);..\mutator\library;library</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);..\mutator\library;library;se_library</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -135,7 +135,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <DisableSpecificWarnings>4244</DisableSpecificWarnings>
-      <AdditionalIncludeDirectories>$(ProjectDir);..\mutator\library;library</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);..\mutator\library;library;se_library</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -151,7 +151,6 @@
     <ClCompile Include="..\mutator\library\json.cpp" />
     <ClCompile Include="..\mutator\library\multi_string.cpp" />
     <ClCompile Include="compressed_exchange_data.cpp" />
-    <ClCompile Include="exchange_basic.cpp" />
     <ClCompile Include="exchange_data.cpp" />
     <ClCompile Include="exchange_research.cpp" />
     <ClCompile Include="exchange_trade.cpp" />
@@ -161,6 +160,8 @@
     <ClCompile Include="mathematics.cpp" />
     <ClCompile Include="mediator.cpp" />
     <ClCompile Include="mutator.cpp" />
+    <ClCompile Include="se_library\exchange_basic.cpp" />
+    <ClCompile Include="se_library\reading_sad.cpp" />
     <ClCompile Include="tetron.cpp" />
     <ClCompile Include="t_function.cpp" />
   </ItemGroup>
@@ -173,7 +174,6 @@
     <ClInclude Include="..\mutator\library\multi_string.h" />
     <ClInclude Include="..\mutator\library\speed.h" />
     <ClInclude Include="compressed_exchange_data.h" />
-    <ClInclude Include="exchange_basic.h" />
     <ClInclude Include="exchange_data.h" />
     <ClInclude Include="exchange_research.h" />
     <ClInclude Include="exchange_trade.h" />
@@ -183,6 +183,8 @@
     <ClInclude Include="mediator.h" />
     <ClInclude Include="mutator.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="se_library\exchange_basic.h" />
+    <ClInclude Include="se_library\reading_sad.h" />
     <ClInclude Include="tetron.h" />
     <ClInclude Include="t_function.h" />
   </ItemGroup>
