--- a/se.vcxproj.filters
+++ b/se.vcxproj.filters
@@ -42,9 +42,6 @@
     <ClCompile Include="g_exchange_graph.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="exchange_data.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
     <ClCompile Include="compressed_exchange_data.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
@@ -78,6 +75,9 @@
     <ClCompile Include="se_library\exchange_basic.cpp">
       <Filter>Исходные файлы\se_library</Filter>
     </ClCompile>
+    <ClCompile Include="se_library\exchange_data.cpp">
+      <Filter>Исходные файлы\se_library</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tetron.h">
@@ -96,9 +96,6 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="g_exchange_graph.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="exchange_data.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="compressed_exchange_data.h">
@@ -141,6 +138,9 @@
       <Filter>Исходные файлы\se_library</Filter>
     </ClInclude>
     <ClInclude Include="se_library\exchange_basic.h">
+      <Filter>Исходные файлы\se_library</Filter>
+    </ClInclude>
+    <ClInclude Include="se_library\exchange_data.h">
       <Filter>Исходные файлы\se_library</Filter>
     </ClInclude>
   </ItemGroup>
