--- a/se.vcxproj
+++ b/se.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="g_exchange_graph.cpp" />
     <ClCompile Include="g_terminal.cpp" />
     <ClCompile Include="library\mathematics.cpp" />
+    <ClCompile Include="library\statistics.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mediator.cpp" />
     <ClCompile Include="mutator.cpp" />
@@ -180,6 +181,7 @@
     <ClInclude Include="g_exchange_graph.h" />
     <ClInclude Include="g_terminal.h" />
     <ClInclude Include="library\mathematics.h" />
+    <ClInclude Include="library\statistics.h" />
     <ClInclude Include="mediator.h" />
     <ClInclude Include="mutator.h" />
     <ClInclude Include="resource.h" />
