--- a/se.vcxproj
+++ b/se.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="compressed_exchange_data.cpp" />
     <ClCompile Include="exchange_research.cpp" />
     <ClCompile Include="exchange_trade.cpp" />
+    <ClCompile Include="froglif.cpp" />
     <ClCompile Include="g_exchange_graph.cpp" />
     <ClCompile Include="g_terminal.cpp" />
     <ClCompile Include="library\mathematics.cpp" />
@@ -178,6 +179,7 @@
     <ClInclude Include="compressed_exchange_data.h" />
     <ClInclude Include="exchange_research.h" />
     <ClInclude Include="exchange_trade.h" />
+    <ClInclude Include="froglif.h" />
     <ClInclude Include="g_exchange_graph.h" />
     <ClInclude Include="g_terminal.h" />
     <ClInclude Include="library\mathematics.h" />
