--- a/se.vcxproj.filters
+++ b/se.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="library\statistics.cpp">
       <Filter>Исходные файлы\library</Filter>
     </ClCompile>
+    <ClCompile Include="froglif.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tetron.h">
@@ -154,6 +157,9 @@
     </ClInclude>
     <ClInclude Include="library\statistics.h">
       <Filter>Исходные файлы\library</Filter>
+    </ClInclude>
+    <ClInclude Include="froglif.h">
+      <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
