--- a/se.vcxproj
+++ b/se.vcxproj
@@ -118,7 +118,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <DisableSpecificWarnings>4244</DisableSpecificWarnings>
-      <AdditionalIncludeDirectories>$(ProjectDir);..\mutator\library;library;se_library</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);..\library;library;se_library</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -135,7 +135,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <DisableSpecificWarnings>4244</DisableSpecificWarnings>
-      <AdditionalIncludeDirectories>$(ProjectDir);..\mutator\library;library;se_library</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);..\library;library;se_library</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -145,11 +145,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\mutator\library\basic.cpp" />
-    <ClCompile Include="..\mutator\library\geometry.cpp" />
-    <ClCompile Include="..\mutator\library\graphics.cpp" />
-    <ClCompile Include="..\mutator\library\json.cpp" />
-    <ClCompile Include="..\mutator\library\multi_string.cpp" />
+    <ClCompile Include="..\library\basic.cpp" />
+    <ClCompile Include="..\library\geometry.cpp" />
+    <ClCompile Include="..\library\graphics.cpp" />
+    <ClCompile Include="..\library\json.cpp" />
+    <ClCompile Include="..\library\multi_string.cpp" />
+    <ClCompile Include="..\library\win_basic.cpp" />
     <ClCompile Include="compressed_exchange_data.cpp" />
     <ClCompile Include="exchange_research.cpp" />
     <ClCompile Include="exchange_trade.cpp" />
@@ -171,13 +172,14 @@
     <ClCompile Include="t_function.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\mutator\library\basic.h" />
-    <ClInclude Include="..\mutator\library\geometry.h" />
-    <ClInclude Include="..\mutator\library\graphics.h" />
-    <ClInclude Include="..\mutator\library\hash.h" />
-    <ClInclude Include="..\mutator\library\json.h" />
-    <ClInclude Include="..\mutator\library\multi_string.h" />
-    <ClInclude Include="..\mutator\library\speed.h" />
+    <ClInclude Include="..\library\basic.h" />
+    <ClInclude Include="..\library\geometry.h" />
+    <ClInclude Include="..\library\graphics.h" />
+    <ClInclude Include="..\library\hash.h" />
+    <ClInclude Include="..\library\json.h" />
+    <ClInclude Include="..\library\multi_string.h" />
+    <ClInclude Include="..\library\speed.h" />
+    <ClInclude Include="..\library\win_basic.h" />
     <ClInclude Include="compressed_exchange_data.h" />
     <ClInclude Include="exchange_research.h" />
     <ClInclude Include="exchange_trade.h" />
