--- a/se.vcxproj
+++ b/se.vcxproj
@@ -146,10 +146,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\library\basic.cpp" />
+    <ClCompile Include="..\library\e_terminal.cpp" />
     <ClCompile Include="..\library\geometry.cpp" />
     <ClCompile Include="..\library\graphics.cpp" />
     <ClCompile Include="..\library\json.cpp" />
     <ClCompile Include="..\library\multi_string.cpp" />
+    <ClCompile Include="..\library\ui.cpp" />
     <ClCompile Include="..\library\win_basic.cpp" />
     <ClCompile Include="compressed_exchange_data.cpp" />
     <ClCompile Include="exchange_research.cpp" />
@@ -157,10 +159,8 @@
     <ClCompile Include="froglif.cpp" />
     <ClCompile Include="g_exchange_graph.cpp" />
     <ClCompile Include="g_terminal.cpp" />
-    <ClCompile Include="library\e_terminal.cpp" />
     <ClCompile Include="library\mathematics.cpp" />
     <ClCompile Include="library\statistics.cpp" />
-    <ClCompile Include="library\ui.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mediator.cpp" />
     <ClCompile Include="mutator.cpp" />
@@ -173,12 +173,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\library\basic.h" />
+    <ClInclude Include="..\library\e_terminal.h" />
     <ClInclude Include="..\library\geometry.h" />
     <ClInclude Include="..\library\graphics.h" />
     <ClInclude Include="..\library\hash.h" />
     <ClInclude Include="..\library\json.h" />
     <ClInclude Include="..\library\multi_string.h" />
     <ClInclude Include="..\library\speed.h" />
+    <ClInclude Include="..\library\ui.h" />
     <ClInclude Include="..\library\win_basic.h" />
     <ClInclude Include="compressed_exchange_data.h" />
     <ClInclude Include="exchange_research.h" />
@@ -186,10 +188,8 @@
     <ClInclude Include="froglif.h" />
     <ClInclude Include="g_exchange_graph.h" />
     <ClInclude Include="g_terminal.h" />
-    <ClInclude Include="library\e_terminal.h" />
     <ClInclude Include="library\mathematics.h" />
     <ClInclude Include="library\statistics.h" />
-    <ClInclude Include="library\ui.h" />
     <ClInclude Include="mediator.h" />
     <ClInclude Include="mutator.h" />
     <ClInclude Include="resource.h" />
