--- a/se.vcxproj.filters
+++ b/se.vcxproj.filters
@@ -54,28 +54,28 @@
     <ClCompile Include="library\statistics.cpp">
       <Filter>Исходные файлы\library</Filter>
     </ClCompile>
-    <ClCompile Include="..\library\basic.cpp">
+    <ClCompile Include="..\mutator\library\basic.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\library\geometry.cpp">
+    <ClCompile Include="..\mutator\library\geometry.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\library\graphics.cpp">
+    <ClCompile Include="..\mutator\library\graphics.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\library\json.cpp">
+    <ClCompile Include="..\mutator\library\json.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\library\multi_string.cpp">
+    <ClCompile Include="..\mutator\library\multi_string.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\library\win_basic.cpp">
+    <ClCompile Include="..\mutator\library\win_basic.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\library\e_terminal.cpp">
+    <ClCompile Include="..\mutator\library\e_terminal.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\library\ui.cpp">
+    <ClCompile Include="..\mutator\library\ui.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="e_exchange_graph.cpp">
@@ -116,31 +116,31 @@
     <ClInclude Include="library\statistics.h">
       <Filter>Исходные файлы\library</Filter>
     </ClInclude>
-    <ClInclude Include="..\library\basic.h">
+    <ClInclude Include="..\mutator\library\basic.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\library\geometry.h">
+    <ClInclude Include="..\mutator\library\geometry.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\library\graphics.h">
+    <ClInclude Include="..\mutator\library\graphics.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\library\hash.h">
+    <ClInclude Include="..\mutator\library\hash.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\library\json.h">
+    <ClInclude Include="..\mutator\library\json.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\library\multi_string.h">
+    <ClInclude Include="..\mutator\library\multi_string.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\library\win_basic.h">
+    <ClInclude Include="..\mutator\library\win_basic.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\library\e_terminal.h">
+    <ClInclude Include="..\mutator\library\e_terminal.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\library\ui.h">
+    <ClInclude Include="..\mutator\library\ui.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="e_exchange_graph.h">
